# NBA_mini_games

./: .gitignore  CMakeLists.txt  Makefile  genPlayerList.py  player_list.csv  rankings.csv  setup.py
dataScraper/: create_defaults.py  getStatsHeadshots.py  main.py  requirements.txt  test_resources.py  test_verify_data.py
dataScraper/database/: db_manager.py  schema.py
dataScraper/scrapers/: headshot_scraper.py  image_scraper.py  nba_stats_scraper.py  player_scraper.py
dataScraper/tests/: test_database.py
dataScraper/utils/: player_utils.py
include/: Button.hpp  GameBase.hpp  GlobalUI.hpp  InputManager.hpp  MainMenu.hpp  Makefile  Player.hpp  PlayerManager.hpp  RankingGame.hpp  TextManager.hpp  ThemeManager.hpp  UIManager.hpp  colors.hpp  config.hpp.in  enums.hpp
include/base/: GameBase.hpp  GameEngine.hpp  UIComponent.hpp  WindowBase.hpp  enums.hpp
include/game/: MainMenu.hpp  Player.hpp  RankingGame.hpp  WhoHePlayFor.hpp
include/ui/: Button.hpp  GlobalUI.hpp  Label.hpp  TextManager.hpp
include/utils/: DatabaseManager.hpp  ErrorHandler.hpp  ResourceManager.hpp  ThemeManager.hpp  config.hpp  config.hpp.in  textUtils.hpp
resources/data/: nba_data.db
resources/team_logos/: svg2png.sh
src/: Button.cpp  GlobalUI.cpp  InputManager.cpp  MainMenu.cpp  Player.cpp  PlayerManager.cpp  RankingGame.cpp  TextManager.cpp  ThemeManager.cpp  UIComponent.cpp  UIManager.cpp  main.cpp
src/base/: GameBase.cpp  GameEngine.cpp  UIComponent.cpp  WindowBase.cpp
src/game/: MainMenu.cpp  Player.cpp  RankingGame.cpp  WhoHePlayFor.cpp
src/ui/: Button.cpp  GlobalUI.cpp  Label.cpp  TextManager.cpp
src/utils/: DatabaseManager.cpp  ResourceManager.cpp  ThemeManager.cpp  textUtils.cpp
